Bug 1661823 - Fix Default Print Settings Unwriteable Margins Units r=AlaskanEmily

Print settings stores margin units in TWIPS, but the API expects inches.
This was causing an extra conversion from inches to TWIPS on values that
were already in TWIPS.

Differential Revision: https://phabricator.services.mozilla.com/D88674